--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ pyyaml = "^6.0"
 networkx = "^3.1"
 matplotlib = "^3.7.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+pytest-cov = "^4.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
